--- a/PCSD Control Panel/Form1.resx
+++ b/PCSD Control Panel/Form1.resx
@@ -131,4 +131,7 @@
         L1neIEORf60QalYiwDN555UYDAaDQR2m6Rc3O7UR73io5wAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
